--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ site.name }}</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-3984116419841048",
+            enable_page_level_ads: true
+        });
+    </script>
 	<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
