--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,19 @@
     </p>
 </div>
 
-<!-- 
-    {% include disqus-counts.html %}
+
+    <!-- {% include disqus-counts.html %} -->
     {% include analytics.html %} 
--->
+<div align="center">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-3984116419841048",
+            enable_page_level_ads: true
+        });
+         </script>
+
+</div>
 
 </body>
 </html>
